==> mikaelnet/pico-experiments/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.hpp"
#include <string.h>
#define LOW 0
#define HIGH 1
#define _BV(x) (1 << (x))

bool RF24::begin(void)
{
    spi_init(_spi_port, _spi_speed);
    gpio_set_function(_clk_pin, GPIO_FUNC_SPI);
    gpio_set_function(_mosi_pin, GPIO_FUNC_SPI);
    gpio_set_function(_miso_pin, GPIO_FUNC_SPI);
    bi_decl(bi_3pins_with_func(_mosi_pin, _miso_pin, _clk_pin, GPIO_FUNC_SPI));
    spi_set_format(_spi_port, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);

    return _init_pins() && _init_radio();
}

void RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
    beginTransaction(); //configures the spi settings for RPi, locks mutex and setting csn low
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size = len + 1;

    *ptx++ = (R_REGISTER | reg);
    while (len--) { 
        *ptx++ = RF24_NOP;  // Dummy operation, just for reading
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);
    status = *prx++; // status is 1st byte of receive buffer

    // decrement before to skip status byte
    while (--size) { 
        *buf++ = *prx++; 
    }

    endTransaction(); // unlocks mutex and setting csn high
}

uint8_t RF24::read_register(uint8_t reg)
{
    uint8_t result;

    beginTransaction();

    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    *ptx++ = (R_REGISTER | reg);
    *ptx++ = RF24_NOP ; // Dummy operation, just for reading

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, 2);

    status = *prx;     // status is 1st byte of receive buffer
    result = *++prx;   // result is 2nd byte of receive buffer

    endTransaction();

    return result;
}

void RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size = len + 1; // Add register value to transmit buffer

    *ptx++ = (W_REGISTER | (REGISTER_MASK & reg));
    while (len--) { 
        *ptx++ = *buf++; 
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);

    status = *prx; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::write_register(uint8_t reg, uint8_t value, bool is_cmd_only)
{
    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    *ptx++ = (W_REGISTER | reg);
    *ptx = value;

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, is_cmd_only ? 1 : 2);

    status = *prx++; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    uint8_t blank_len = !data_len ? 1 : 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

    *ptx++ =  writeType;
    while (data_len--) { 
        *ptx++ = *current++; 
    }
    while (blank_len--) { 
        *ptx++ = 0; 
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);

    status = *prx; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::read_payload(void* buf, uint8_t data_len)
{
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);

    uint8_t blank_len = 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    beginTransaction();
    uint8_t * prx = spi_rxbuff;
    uint8_t * ptx = spi_txbuff;
    uint8_t size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

    *ptx++ =  R_RX_PAYLOAD;
    while(--size) { 
        *ptx++ = RF24_NOP; 
    }

    size = data_len + blank_len + 1; // Size has been lost during while, re affect

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);
    status = *prx++; // 1st byte is status

    if (data_len > 0) {
        // Decrement before to skip 1st status byte
        while (--data_len) { 
            *current++ = *prx++; 
        }

        *current = *prx;
    }
    endTransaction();
}

void RF24::openReadingPipe(uint8_t child, uint64_t address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, &address, addr_width);
        _is_p0_rx = true;
    }

    if (child <= 5) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
            write_register(child_pipe[child], reinterpret_cast<const uint8_t*>(&address), addr_width);
        } else {
            write_register(child_pipe[child], reinterpret_cast<const uint8_t*>(&address), 1);
        }

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        write_register(EN_RXADDR, static_cast<uint8_t>(read_register(EN_RXADDR) | _BV(child_pipe_enable[child])));
    }
}

void RF24::openReadingPipe(uint8_t child, const uint8_t* address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, address, addr_width);
        _is_p0_rx = true;
    }
    if (child <= 5) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
            write_register(child_pipe[child], address, addr_width);
        } else {
            write_register(child_pipe[child], address, 1);
        }

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        uint8_t rxAddr = read_register(EN_RXADDR) | _BV(child_pipe_enable[child]);
        write_register(EN_RXADDR, rxAddr);

    }
}

void RF24::toggle_features()
{
    beginTransaction();
    status = spiTransfer(ACTIVATE);
    spiTransfer(0x73);
    endTransaction();
}

void RF24::startListening(void)
{
    powerUp();
    config_reg |= _BV(PRIM_RX);
    write_register(NRF_CONFIG, config_reg);
    write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));
    ce(HIGH);

    // Restore the pipe0 address, if exists
    if (_is_p0_rx) {
        write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
    } else {
        closeReadingPipe(0);
    }
}

void RF24::stopListening(void)
{
    ce(LOW);

    sleep_us(txDelay);
    if (ack_payloads_enabled){
        flush_tx();
    }

    config_reg = config_reg & ~_BV(PRIM_RX);
    write_register(NRF_CONFIG, config_reg);

    uint8_t rxAddr = read_register(EN_RXADDR) | _BV(child_pipe_enable[0]);
    write_register(EN_RXADDR, rxAddr); // Enable RX on pipe0
}

void RF24::powerUp(void)
{
    // if not powered up then power up and wait for the radio to initialize
    if (!(config_reg & _BV(PWR_UP))) {
        config_reg |= _BV(PWR_UP);
        write_register(NRF_CONFIG, config_reg);

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        sleep_us(RF24_POWERUP_DELAY);
    }
}
