==> phungorquan/NRF_BELL_HOME/AT8/TX_NRF/RX_B/RF24.cpp <==
#include "RF24.h"

uint8_t RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
	uint8_t status;

	//#if defined (RF24_LINUX)
	//cbi(PORTB,CSN); // ~begintransaction
	//uint8_t * prx = spi_rxbuff;
	//uint8_t * ptx = spi_txbuff;
	//uint8_t size = len + 1; // Add register value to transmit buffer
//
	//*ptx++ = ( W_REGISTER | ( REGISTER_MASK & reg ) );
	//while ( len-- )
	//*ptx++ = *buf++;
	//
	//transfernb( (char *) spi_txbuff, (char *) spi_rxbuff, size);
	//status = *prx; // status is 1st byte of receive buffer
	//sbi(PORTB,CSN); // ~endtransaction
	//#else

	cbi(PORTB,CSN); // ~begintransaction
	status = transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
	while ( len-- )
	transfer(*buf++);
	sbi(PORTB,CSN); // ~endtransaction

	//#endif

	return status;
}

uint8_t RF24::write_register(uint8_t reg, uint8_t value)
{
	uint8_t status;
	cbi(PORTB,CSN); // ~begintransaction
	status = transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
	transfer(value);
	sbi(PORTB,CSN); // ~endtransaction

	return status;
}

uint8_t RF24::read_register(uint8_t reg)
{
	uint8_t result;

	cbi(PORTB,CSN); // ~begintransaction
	transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
	result =transfer(0xff);
	sbi(PORTB,CSN); // ~endtransaction

	return result;
}

void RF24::toggle_features(void)
{
	cbi(PORTB,CSN); // ~begintransaction
	transfer( ACTIVATE );
	transfer( 0x73 );
	sbi(PORTB,CSN); // ~endtransaction
}

void RF24::powerUp(void)
{
	uint8_t cfg = read_register(NRF_CONFIG);

	// if not powered up then power up and wait for the radio to initialize
	if (!(cfg & _BV(PWR_UP))){
		write_register(NRF_CONFIG, cfg | _BV(PWR_UP));

		// For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
		// There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
		// the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
		_delay_ms(5);
	}
}

void RF24::openReadingPipe(uint8_t child, const uint8_t *address)
{
	// If this is pipe 0, cache the address.  This is needed because
	// openWritingPipe() will overwrite the pipe 0 address, so
	// startListening() will have to restore it.
	
	//if (child == 0){
		//memcpy(pipe0_reading_address,address,addr_width);
	//}
	
	if (child <= 6)
	{
		// For pipes 2-5, only write the LSB
		if ( child < 2 ){
			write_register(pgm_read_byte(&child_pipe[child]), address, addr_width);
			}else{
			write_register(pgm_read_byte(&child_pipe[child]), address, 1);
		}
		write_register(pgm_read_byte(&child_payload_size[child]),payload_size);

		// Note it would be more efficient to set all of the bits for all open
		// pipes at once.  However, I thought it would make the calling code
		// more simple to do it this way.
		write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));

	}
}

void RF24::startListening(void)
{
	#if !defined (RF24_TINY) && ! defined(LITTLEWIRE)
	powerUp();
	#endif
	write_register(NRF_CONFIG, read_register(NRF_CONFIG) | _BV(PRIM_RX));
	write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	sbi(PORTB,SS); 
	//ce(HIGH);
	// Restore the pipe0 adddress, if exists
	if (pipe0_reading_address[0] > 0){
		write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
		}else{
		closeReadingPipe(0);
	}

	// Flush buffers
	//flush_rx();
	if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
		flush_tx();
	}

	// Go!
	//delayMicroseconds(100);
}

bool RF24::begin(void)
{

  uint8_t setup=0;
  SPI_Init();
 // cbi(PORTB,SS);
  sbi(PORTB,CSN);
  _delay_ms(105);


  // Reset NRF_CONFIG and enable 16-bit CRC.
  write_register( NRF_CONFIG, 0x0C ) ;

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5,15);

  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // check for connected module and if this is a p nRF24l01 variant
  //
  if( setDataRate  ( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
  {
    p_variant = true ;
  }*/
  
  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  //setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE,0 );
  write_register(DYNPD,0);
  dynamic_payloads_enabled = false;

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  // Flush buffers
  flush_rx();
  flush_tx();

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

  // if setup is 0 or ff then there was no response from module
  return ( setup != 0 && setup != 0xff );
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
	uint8_t status;
	uint8_t* current = reinterpret_cast<uint8_t*>(buf);

	if(data_len > payload_size) data_len = payload_size;
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
	
	//printf("[Reading %u bytes %u blanks]",data_len,blank_len);

	//IF_SERIAL_DEBUG( printf("[Reading %u bytes %u blanks]\n",data_len,blank_len); );
	
	
	cbi(PORTB,CSN); // ~begintransaction
	status = transfer( R_RX_PAYLOAD );
	while ( data_len-- ) {
		*current++ = transfer(0xFF);
	}
	while ( blank_len-- ) {
		transfer(0xff);
	}
	sbi(PORTB,CSN); // ~endtransaction


	return status;
}

void RF24::stopListening(void)
{
	//ce(LOW);
	cbi(PORTB,SS);
	_delay_ms(10);
	//delayMicroseconds(txDelay);
	
	if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
		_delay_ms(10); //200
		flush_tx();
	}
	//flush_rx();
	write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );
	
	#if defined (RF24_TINY) || defined (LITTLEWIRE)
	// for 3 pins solution TX mode is only left with additonal powerDown/powerUp cycle
	if (ce_pin == csn_pin) {
		powerDown();
		powerUp();
	}
	#endif
	write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0
	
	//delayMicroseconds(100);

}

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
	uint8_t status;
	const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

	data_len = rf24_min(data_len, payload_size);
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
	
	//printf("[Writing %u bytes %u blanks]",data_len,blank_len);
	//IF_SERIAL_DEBUG( printf("[Writing %u bytes %u blanks]\n",data_len,blank_len); );
	
	

	cbi(PORTB,CSN); // ~begintransaction
	status = transfer( writeType );
	while ( data_len-- ) {
		transfer(*current++);
	}
	while ( blank_len-- ) {
		transfer(0);
	}
		sbi(PORTB,CSN); // ~endtransaction


	return status;
}
